2010-09-03  muqun

	Fix for the bug in the debug mode testing; s2_t is defined multiple times

2010-08-30  muqun

	Missed initialization added

2010-08-27  muqun

	Debug: Shortening dimension path

2010-08-27  muqun

	Added Xdim and Ydim to the name conversion map

2010-08-20  muqun

	MKDIR_P problem in the configure.ac is fixed

2010-08-16  muqun

	1.4.2 release info

2010-08-16  muqun

	Grid parsing tests are done only when --enable-cf is given

2010-08-15 Eunsoo Seo <eseo2@hdfgroup.org>
	* A bug in the Grid lat/lon calculation logic is fixed.
	  Previously, the logic did not use PixelRegistration and
	  GridOrigin information.
	* If there are >1 grids in a file, they are required to
	  use the same grid parameters (Projection, PixelRegistration,
	  GridOrigin, UpperLeftPointMtrs and LowerRightMtrs.
	  This was not checked in the previous version.

2010-04-28  hyoklee

	Updated ChangeLog.

2010-04-28  hyoklee

	Added H5Aclose to improve performance under HDF5-1.8.x library.

2010-04-28  James Gallagher <jgallagher@opendap.org>

	Removed old EXTRADIST items (removed some of the old, unused,
	dejaGNU files.

2010-04-28  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* h5get.cc has H5Aclose(). This improves performance under
          HDF5-1.8.x library.

	* h5das.cc has H5Aclose(). This improves performance under
          HDF5-1.8.x library.

2010-02-10  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* HE5Parser.cc has new limit(=30) for StructMetadata files to scan.
	* HDF5RequestHandler.cc has more meaningful error message when it 
	  deals with multiple Swaths case.
	* h5das.cc checks null pointers when it adds group information.

2010-02-03  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* HE5Parser.cc is cleaned up and checks 30 metadata files

2010-02-01  rduncan

	Release 1/01/2010

2010-01-29  hyoklee

	Fixed the coompilation error when DEBUG mode is enabled.

2010-01-22  Patrick West <pwest@ucar.edu>

	RPM to use h5.conf instead of bes-hdf5-data.sh